# nile

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: deploy.sh
src/: board.rs  event.rs  lib.rs  log.rs  nile.rs  path.rs  player.rs  score.rs  tile.rs  validation.rs  wasm_api.rs
src/ai/: brute.rs  mod.rs
src/core/: Cargo.toml  README.md
src/core/src/: board.rs  console.rs  error.rs  lib.rs  log.rs  nile.rs  path.rs  player.rs  score.rs  tile.rs  wasm_api.rs
src/core/src/ai/: brute.rs  mod.rs
src/ui/: Cargo.toml  README.md  index.html
src/ui/src/: app.rs  colors.rs  lib.rs  main.rs  state.rs
src/ui/src/components/: board.rs  board_cell.rs  button.rs  carbon_icon.rs  container.rs  controls.rs  footer.rs  game.rs  game_form.rs  mod.rs  modal.rs  player.rs  tile.rs  tile_svg.rs  utils.rs
src/ui/src/in_game/: board.rs  controls.rs  game.rs  header.rs  mod.rs  player.rs  state.rs
src/ui/src/landing/: button.rs  cover_art.rs  game_form.rs  header.rs  mod.rs
src/ui/static/: index.css  manifest.json
web/: .eslintignore  .eslintrc.js  .gitignore  App.module.css  App.tsx  bootstrap.ts  index.css  index.html  index.js  index.ts  jest.config.js  package-lock.json  package.json  styles.d.ts  tsconfig.json  tsconfig.prod.json  tsconfig.test.json  webpack.config.js
web/components/: Board.module.css  Board.tsx  Button.tsx  Container.module.css  Container.tsx  Controls.module.css  Controls.tsx  CoverArt.module.css  CoverArt.tsx  Footer.module.css  Footer.tsx  Game.tsx  GameForm.module.css  GameForm.tsx  Grid.tsx  Header.module.css  Header.tsx  Modal.module.css  Modal.tsx  Player.module.css  Player.tsx  PlayerNameInput.tsx  Players.module.css  Players.tsx  Scoreboard.tsx  ShortcutsHelp.tsx  Tile.module.css  Tile.tsx  TileRack.module.css  TileRack.tsx  TileSvg.tsx  colors.module.css
web/front_end/: App.tsx
web/front_end/in_game/: Board.module.css  Board.tsx  Controls.module.css  Controls.tsx  Game.tsx  Header.module.css  Header.tsx  InGame.tsx  Player.tsx  Players.module.css  Players.tsx  ShortcutsHelp.module.css  ShortcutsHelp.tsx  TileRack.tsx
web/front_end/landing/: Buttons.module.css  Buttons.tsx  GameForm.module.css  GameForm.tsx  Header.tsx  Landing.module.css  Landing.tsx
web/lib/: CoordinateSet.ts  Timer.ts  app_state.ts  common.ts  events.ts  game_state.ts  hooks.ts  state.ts  tile.ts  utils.ts
web/lib/tests/: CoordinateSet.ts  hooks.ts  state.ts
