[package]
name = "nile"
version = "0.1.0"
description = "Board game Nile in the browser"
authors = ["Carter Green <cartergr@usc.edu>"]
repository = "https://github.com/threecgreen/nile"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
rand = "0.7.3"
js-sys = "0.3.44"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small size
opt-level = "s"
