[package]
name = "nile"
version = "0.1.0"
description = "Board game Nile in the browser"
authors = ["Carter Green <cartergr@usc.edu>"]
repository = "https://github.com/threecgreen/nile"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.67" }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
js-sys = "0.3.44"
# Debuggable panics
console_error_panic_hook = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.17"

[profile.release]
# Tell `rustc` to optimize for small size
opt-level = "s"
