[package]
name = "nile-ui"
version = "0.3.0"
description = "UI frontend for playing the game Nile in the browser"
authors = ["Carter Green <cartergr@usc.edu>"]
repository = "https://github.com/threecgreen/nile"
readme = "./README.md"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nile = { path = "../core" }
yew = { version = "0.20", features = ["csr"] }
yewdux = "0.9"
